dockerfile works, compose fails on grcpio

--- a/dockerfolder/dockerfile
+++ b/dockerfolder/dockerfile
@@ -9,10 +9,14 @@ RUN apt-get install \
     'libxext6'  -y
 RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 
+RUN pip3 install grpcio
+
 COPY . .
 
 RUN pip3 install -r requirements.txt
 
 EXPOSE 8080
+
+
 
 CMD ["python3", "api.py"]
