--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3'
 
 services:
   api-service:
-    build: .
+    build: 
+      context: .
+      dockerfile: dockerfolder/dockerfile
     volumes:
-      - ~/app:/app
+      - ~/dockerfolder:/app
     ports:
       - 8080:8080
     restart: always
