--- a/dockerfolder/dockerfile
+++ b/dockerfolder/dockerfile
@@ -9,7 +9,7 @@ RUN apt-get install \
     'libxext6'  -y
 RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 
-RUN pip3 install grpcio
+RUN pip3 install wheel
 
 COPY . .
 
